# rs-zabbix-rds-discovery

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: clap.yml  main.rs
test-data/: rds-success-all-instances.xml  rds-success-all-instances_expected.json  rds-success-match_ListTagsForResource.xml  rds-success-match_expected.json  rds-success-no-match_DescribDBInstances.xml
